...

    // Initialize temporary patient for only the required fields
    _tempFormPatient = originalPassedInPatient ??
        Patient(
            fName: '',
            lName: '',
            condition: '',
            phone: '',
            age: 0,
            email: '',
            doctorPhoneNumber: '',
            therapistId: authController.therapistId ?? '',
            emoji: getRandomFoodEmoji());
  }

  @override
...
        child: Padding(
          padding: const EdgeInsets.all(8.0),
          child: FormBuilder(
            key: _formKey,
            initialValue: isUpdateForm
                ? {
                    'first_name': patient.fName.trim(),
                    'last_name': patient.lName.trim(),
                    'condition': patient.condition.trim(),
                    'phone': patient.phone.trim(),
                    'age': patient.age.toString().trim(),
                    'email': patient.email.trim(),
                    'doctor_phone': patient.doctorPhoneNumber.trim(),
                    'weight': patient.weight?.toString().trim(),
                    'height': patient.height?.toString().trim(),
                    'guardian_phone': patient.guardianPhoneNumber?.trim(),
                  }
                : {},
            child: Column(
              children: [
                // First Name (Required, Min: 2, Max: 50)
                FormBuilderTextField(
...
                // Submit and Cancel Buttons
                Row(
                  children: <Widget>[
                    // submit button
                    Expanded(
                      child: ElevatedButton(
                        key: const Key('submit_form'),
                        onPressed: () async {
                          if (_formKey.currentState?.saveAndValidate() ??
                              false) {
                            // initialize the patient and check if it succeeded
                            // do different actions for an addition vs. a create
                            Patient? patientSubmitted;
...
                              }
                              // Show success or failure dialog
                              showDialog(
                                context: context,
                                builder: (final BuildContext context) {
                                  return AlertDialog(
                                    key: const Key('submission_result'),
                                    title: Text(patientSubmitted != null
                                        ? 'Success'
                                        : 'Error'),
                                    content: Text(patientSubmitted != null
                                        ? 'Patient ${patientSubmitted.fName} ${patientSubmitted.lName}'
                                            ' was successfully registered with an ID of ${patientSubmitted.id}'
...
