...
    } 
    // In guest mode only show patients list page as route
    else if (AuthController().isGuestLoggedIn()) {
      // if not owner, then it is therapist
      return <Widget>[
            ListTile(
              key: const Key('patient_list_main'),
              title: const Text('Patients'),
              onTap: () {
                Navigator.pushNamed(context, PatientList.RouteName);
              },
            ),
          ] +
...
