...
                  context,
                  MaterialPageRoute(
                    builder: (final context) => const PatientAdditionFormPage(),
                  ),
                );
              },
              tooltip: 'Add a new patient',
              color: Colors.black,
            ),
          )
        ],
      ),
      drawer: const HippoAppDrawer(),
...
